--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "example": "example"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "cake build; mocha"
   },
   "repository": {
     "type": "git",
